--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,34 @@
 {
-    "name": "staketask",
-    "private": true,
-    "version": "0.0.103",
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start"
-    },
-    "dependencies": {
-      "@rainbow-me/rainbowkit": "^2.2.6",
-      "@tanstack/react-query": "^5.55.3",
-      "next": "^15.3.3",
-      "react": "^19.1.0",
-      "react-dom": "^19.1.0",
-      "viem": "2.29.2",
-      "wagmi": "^2.15.5"
-    },
-    "devDependencies": {
-      "@types/node": "^20.14.8",
-      "@types/react": "^19.1.6",
-      "typescript": "5.5.4"
-    }
+  "name": "staketask",
+  "private": true,
+  "version": "0.0.103",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@rainbow-me/rainbowkit": "^2.2.6",
+    "@tanstack/react-query": "^5.80.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.513.0",
+    "next": "^15.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.0",
+    "viem": "2.29.2",
+    "wagmi": "^2.15.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.8",
+    "@types/react": "^19.1.6",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.5.4"
   }
-  
+}
